--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -36,6 +36,8 @@ add_library( # Sets the name of the library.
              src/main/cpp/game_level.h
              src/main/cpp/game_level.cpp
              src/main/cpp/linmath.h
+             src/main/cpp/ball_object.h
+             src/main/cpp/ball_object.cpp
              )
 
 # Searches for a specified prebuilt library and stores the path as a
