--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -38,6 +38,8 @@ add_library( # Sets the name of the library.
              src/main/cpp/linmath.h
              src/main/cpp/ball_object.h
              src/main/cpp/ball_object.cpp
+             src/main/cpp/particle_generator.h
+             src/main/cpp/particle_generator.cpp
              )
 
 # Searches for a specified prebuilt library and stores the path as a
