--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -46,6 +46,8 @@ add_library( # Sets the name of the library.
              src/main/cpp/particle_generator.cpp
              src/main/cpp/post_processor.h
              src/main/cpp/post_processor.cpp
+             src/main/cpp/reward.h
+             src/main/cpp/reward.cpp
              )
 
 # Searches for a specified prebuilt library and stores the path as a
